2004-06-11  Don Porter  <dgp@users.sourceforge.net>

	* unix/tclUnixInit.c:	The routines Tcl_Init() and TclSourceRCFile()
	* win/tclWinInit.c:	had identical implementations for both win and
	* generic/tclInterp.c:	unix.  Moved to a single generic implementation.
	* generic/tclMain.c:
	* library/init.tcl:
	* generic/tclInitScript.h (removed):
	* unix/Makefile.in:
	* win/tcl.dsp:

	* unix/configure.in:	Updated TCL_PACKAGE_PATH value to
	* win/configure.in:	handle --libdir configuration.

	* unix/configure.in:	autoconf-2.57
	* win/configure.in:

	* generic/tclBasic.c (Tcl_CreateInterp): Moved call to
	TclInitEmbeddedConfigurationInformation() earlier in
	Tcl_CreateInterp() so that other parts of interp creation
	and initialization may access and use the config values.

2004-06-11  Kevin Kenny  <kennykb@acm.org>

	* win/tclAppInit.c: Restored the 'setargv' procedure when
	compiling with mingw.  Apparently, the command line parsing in
	mingw doesn't work as well as that in vc++, and the result was
	(1) that winPipe-8.19 failed, and (2) that 'make test' would
	work at all only with TESTFLAGS='-singleproc 1'. [Bug 967195]
	
2004-06-10  Zoran Vasiljevic <vasiljevic@users.sf.net>

	* generic/tclIOUtil.c: removed forceful setting of the
	  private cached current working directory rep from 
	  within the Tcl_FSChdir(). We delegate this task to
	  the Tcl_FSGetCwd() which does this task anyway.
	  The relevant code is still present but disabled 
	  temporarily until the change proves correct. The Tcl
	  test suite passes all test with the given change so
	  I suppose it is good enough.

2004-06-10  Don Porter  <dgp@users.sourceforge.net>

	* unix/tclUnixInit.c (TclpInitLibraryPath):	Disabled addition of
	* win/tclWinInit.c (TclpInitLibraryPath):	relative-to-executable
	directories to the library search path.  A first step in reform of
	Tcl's startup process.

	***POTENTIAL INCOMPATIBILITY***
	Attempts to directly run ./tclsh or ./tcltest out of a build